[package]
name = "tower-sessions-moka-store"
description = "Moka session store for `tower-sessions`."
version = "0.13.0"
edition = "2021"
authors = ["Max Countryman <hello@maxcountryman.com>"]
license = "MIT"
homepage = "https://github.com/maxcountryman/tower-sessions-stores"
keywords = ["axum", "sessions", "cookie", "tower", "moka"]
categories = ["asynchronous", "network-programming", "web-programming"]
repository = "https://github.com/maxcountryman/tower-sessions-stores"
documentation = "https://docs.rs/tower-sessions-moka-store"
readme = "README.md"

[dependencies]
async-trait = "0.1.77"
moka = { version = "0.12.0", features = ["future"] }
time = "0.3.31"
tower-sessions-core = "0.13.0"

[dev-dependencies]
axum = "0.7.1"
tower-sessions = "0.13.0"
tower-sessions-sqlx-store = { path = "../sqlx-store/", features = ["sqlite"] }
tokio = { version = "1.32.0", features = ["full"] }
tokio-test = "0.4.3"
serde = "1"

[[example]]
name = "moka"
