[package]
name = "tower-sessions-mongodb-store"
description = "MongoDB session store for `tower-sessions`."
version = "0.11.0"
edition = "2021"
authors = ["Max Countryman <hello@maxcountryman.com>"]
license = "MIT"
homepage = "https://github.com/maxcountryman/tower-sessions-stores"
keywords = ["axum", "sessions", "cookie", "tower", "mongodb"]
categories = ["asynchronous", "network-programming", "web-programming"]
repository = "https://github.com/maxcountryman/tower-sessions-stores"
documentation = "https://docs.rs/tower-sessions-mongodb-store"
readme = "README.md"

[dependencies]
async-trait = "0.1.77"
bson = { version = "2.7.0", features = ["time-0_3"] }
mongodb = { version = "2.7.0" }
rmp-serde = "1.1.2"
serde = "1.0.195"
thiserror = "1.0.56"
time = "0.3.31"
tower-sessions-core = { version = "0.11.0", features = ["deletion-task"] }

[dev-dependencies]
axum = "0.7.1"
tower-sessions = "0.11.0"
tokio = { version = "1.32.0", features = ["full"] }
tokio-test = "0.4.3"
serde = "1"

[[example]]
name = "mongodb"
