[package]
name = "tower-sessions-redis-store"
description = "Redis session store for `tower-sessions`."
version = "0.16.0"
edition = "2021"
authors = ["Max Countryman <hello@maxcountryman.com>"]
license = "MIT"
homepage = "https://github.com/maxcountryman/tower-sessions-stores"
keywords = ["axum", "sessions", "cookie", "tower", "redis"]
categories = ["asynchronous", "network-programming", "web-programming"]
repository = "https://github.com/maxcountryman/tower-sessions-stores"
documentation = "https://docs.rs/tower-sessions-redis-store"
readme = "README.md"

[dependencies]
async-trait = "0.1.88"
fred = "10.1"
rmp-serde = "1.3"
thiserror = "2.0"
time = "0.3.41"
tower-sessions-core = "0.14.0"

[dev-dependencies]
axum = "0.8.1"
tower-sessions = "0.14.0"
tokio = { version = "1.32.0", features = ["full"] }
tokio-test = "0.4.3"
serde = "1"

[features]
# Enable `fred` TLS support via native-tls
enable-native-tls = ["fred/enable-native-tls"]
# Enable `fred` TLS support via rustls with the default crypto backend features
enable-rustls = ["fred/enable-rustls"]
# Enable the `openssl/vendored` feature
vendored-openssl = ["fred/vendored-openssl"]
# Enable `fred` `dynamic_pool` feature
dynamic-pool = ["fred/dynamic-pool"]

[[example]]
name = "redis"
