[package]
name = "tower-sessions-sqlx-store"
description = "SQLx session stores for `tower-sessions`."
version = "0.13.0"
edition = "2021"
authors = ["Max Countryman <hello@maxcountryman.com>"]
license = "MIT"
homepage = "https://github.com/maxcountryman/tower-sessions-stores"
keywords = ["axum", "sessions", "cookie", "tower", "sqlx"]
categories = ["asynchronous", "network-programming", "web-programming"]
repository = "https://github.com/maxcountryman/tower-sessions-stores"
documentation = "https://docs.rs/tower-sessions-sqlx-store"
readme = "README.md"

[features]
default = ["time"]
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]
mysql = ["sqlx/mysql"]

time = ["sqlx/time", "dep:time"]
chrono = ["sqlx/chrono", "dep:chrono"]

[dependencies]
async-trait = "0.1.77"
rmp-serde = "1.1.2"
sqlx = { version = "0.8.0", features = ["runtime-tokio"] }
thiserror = "1.0.56"
time = { version = "0.3.31", optional = true }
chrono = { version = "0.4.38", optional = true }
tower-sessions-core = { version = "0.12.1", features = ["deletion-task"] }

[dev-dependencies]
axum = "0.7.1"
tower-sessions = "0.12.1"
tokio = { version = "1.32.0", features = ["full"] }
tokio-test = "0.4.3"
serde = "1"

[[example]]
name = "sqlite"
required-features = ["sqlite", "time"]

[[example]]
name = "postgres"
required-features = ["postgres", "time"]

[[example]]
name = "mysql"
required-features = ["mysql", "time"]
