[package]
name = "tower-sessions-sqlx-store"
description = "SQLx session stores for `tower-sessions`."
version = "0.15.0"
edition = "2021"
authors = ["Max Countryman <hello@maxcountryman.com>"]
license = "MIT"
homepage = "https://github.com/maxcountryman/tower-sessions-stores"
keywords = ["axum", "sessions", "cookie", "tower", "sqlx"]
categories = ["asynchronous", "network-programming", "web-programming"]
repository = "https://github.com/maxcountryman/tower-sessions-stores"
documentation = "https://docs.rs/tower-sessions-sqlx-store"
readme = "README.md"

[features]
default = ["sqlx-time"]

sqlx-time = [
    "time",
    "sqlx/time",
]

sqlx-chrono = [
    "chrono",
    "sqlx/chrono",
]

sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]
mysql = ["sqlx/mysql"]

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", optional = true }
rmp-serde = "1.3"
sqlx = { version = "0.8", features = ["runtime-tokio"] }
thiserror = "2.0"
time = { version = "0.3", optional = true }
tower-sessions-core = { version = "0.14", features = ["deletion-task"] }

[dev-dependencies]
axum = "0.8.4"
time = { version = "0.3" }
tower-sessions = "0.14.0"
tokio = { version = "1.46.1", features = ["full"] }
tokio-test = "0.4.4"
serde = "1"

[[example]]
name = "sqlite"
required-features = ["sqlite"]

[[example]]
name = "postgres"
required-features = ["postgres"]

[[example]]
name = "mysql"
required-features = ["mysql"]
