[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[features]
dynamic-pool = ["tower-sessions-redis-store/dynamic-pool"]

[dev-dependencies]
axum = "0.8.1"
http = "1.0"
http-body-util = "0.1"
hyper = "1.0"
time = "0.3.30"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4.13", features = ["util"] }
tower-cookies = "0.11.0"
tower-sessions = "0.14.0"
tower-sessions-sqlx-store = { path = "../sqlx-store/", features = [
  "sqlite",
  "mysql",
  "postgres",
] }
tower-sessions-redis-store = { path = "../redis-store/" }
tower-sessions-mongodb-store = { path = "../mongodb-store/" }
tower-sessions-moka-store = { path = "../moka-store/" }

[[test]]
name = "test_integration"
path = "test-integration.rs"
